2012-05-20  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/ast.boot (shoeCompTran): Simplify.
	(shoeCompTran1): Partially defer translation of fluid variable
	definition.
	(bindFluidVars!): New. Complete translation.
	(groupFluidVars): New.
	* interp/newfort.boot (fortFormatIntrinsics): Remove redundant return.

2012-05-19  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/ast.boot (shoeCompTran1): Take variable sets by reference.
	Remove globals.  Adjust caller.
	(shoeCompTran): Replace fluid variables by references.

2012-05-19  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/tokens.boot: symbolBinding is now builtin.
	* boot/ast.boot (%Ast): Add %Dynamic variant.
	(bfColonColon): Use symbolBinding instead of FIND-SYMBOLS.
	(compFluid): Return a %Dynamic form.  Adjust callers.
	(shoeCompTran): Tidy.
	* boot/translator.boot (BOOTLOOP): Tidy.
	(BOOTPO): Likewise.

2012-05-11  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/c-util.boot: Miscellaneous cleanup.
	* interp/compiler.boot: Likewise.
	* interp/database.boot: Likewise.
	* interp/debug.lisp: Likewise.
	* interp/format.boot: Likewise.
	* interp/g-timer.boot: Likewise.
	* interp/ht-util.boot: Likewise.
	* interp/i-syscmd.boot: Likewise.
	* interp/macros.lisp: Likewise.
	* interp/monitor.lisp: Likewise.
	* interp/msgdb.boot: Likewise.
	* interp/newfort.boot: Likewise.
	* interp/nlib.lisp: Likewise.
	* interp/parsing.lisp: Likewise.
	* interp/pf2atree.boot: Likewise.
	* interp/pf2sex.boot: Likewise.
	* interp/posit.boot: Likewise.
	* interp/sfsfun.boot: Likewise.
	* interp/util.lisp: Likewise.

2012-05-11  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (findString): New.
	* interp/preparse.lisp: Use it instead of SEARCH.

2012-05-11  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (findChar): New.
	* interp/preparse.lisp (preparse1): Use it instead of POSITION.

2012-05-11  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/preparse.lisp (PARSEPRINT): Move to spad-parser.boot.
	Rename as parsePrint.
